# Tilted-Facial-Detection-for-Streaming-Web-App

./: .gitignore  DetectedArea.py  GlyLibrary.py  ImageManager.py  ServerVideoManager.py  VideoManager.py  setup.py
FacialDetection/: DetectedArea.py  ImageManager.py  SimdFunctionsPython.py  Test_live.py  VideoManager.py  VideoManagerForServer.py  helperFunctions.py  main.py
FacialDetection/testingParts/: TestPoint.py  testImageManagerFunctions.py  testRandomStuffs.py  testVideoManager.py  weirdTestVideoManagerFPSOnline.py
package/: LICENSE.txt  MANIFEST.in  README.txt  setup.cfg
package/src/glyFacialDetection/: FrameThread.py  GlyLibrary.py
package/src/glyFacialDetection.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
testingParts/: TestPoint.py  testImageManagerFunctions.py  testVideoManager.py  testingRotateFunction.py  weirdTestVideoManagerFPSOnline.py
testingParts/testVideos/: testMultiThreading.py
