[metadata]
name = glyFacialDetection
version = 0.0.13
author = Duong Hoang Vu
author_email = duongvh1806@gmail.com
description = A library that provides functions to detect tilted faces with higher accuracy than the standard one found in opencv
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    FacialDetectionForServer = https://github.com/Glyochi/FacialDetectionForServer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src